fix hashtag overflow in gallery

--- a/client/src/Card/Card.css
+++ b/client/src/Card/Card.css
@@ -151,6 +151,9 @@
 }
 .HashtagsRow {
     justify-content: flex-start !important;
+    margin-left: 40px;
+    margin-top: 20px;
+    width: fit-content;
 }
 
 .StoryIsEditable {
